<resources>
    <string name="app_name">My Weather</string>
    <string name="search">Search</string>
    <string name="favorite">Favorites</string>
    <string name="settings">Settings</string>
    <string name="search_text">Enter the city name…</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius">ºC</string>
    <string name="fahrenheit">ºF</string>
    <string name="lang">Language selection</string>
    <string name="en">English</string>
    <string name="pt">Portuguese</string>
    <string name="weather_status">Image of weather status</string>
    <string name="save">Save</string>
    <string name="api_key" translatable="false">608f7716a8dcf5de9c2ef061214f80b9</string>
</resources>