<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.SettingsFragment">

    <TextView
        android:id="@+id/temp_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_unit"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_temp_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/temp_unit" >

        <RadioButton
            android:id="@+id/celsius_button"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/celsius" />

        <RadioButton
            android:id="@+id/fahrenheit_button"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit" />

    </RadioGroup>

    <TextView
        android:id="@+id/language_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_temp_unit" />

    <RadioGroup
        android:id="@+id/lang_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/language_selection" >

        <RadioButton
            android:id="@+id/lang_en"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/en" />

        <RadioButton
            android:id="@+id/lang_pt"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:text="@string/pt" />

    </RadioGroup>

    <Button
        android:id="@+id/save_button"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_group"/>

</androidx.constraintlayout.widget.ConstraintLayout>